<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none"
    android:paddingBottom="20px"
    tools:context="app.okiimport.com.okiimport.ActDetalleRequerimiento">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/rectangle_head">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20px"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/datos_personales"
                android:textColor="@color/Blanco"/>

        </LinearLayout>

        <GridLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="10px"
            android:paddingRight="10px"
            android:layout_marginBottom="10px"
            android:padding="20px"
            android:background="@drawable/rectangle">

            <TextView
                android:layout_width="103dp"
                android:layout_height="match_parent"
                android:text="@string/cedula_no"
                android:layout_row="0"
                android:layout_column="0" />

            <TextView
                android:layout_width="103dp"
                android:layout_height="match_parent"
                android:id="@+id/lblAVRCedula"
                android:layout_column="2"
                android:layout_row="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_razon_social_no"
                android:layout_row="1"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblAVRNombre"
                android:layout_row="1"
                android:layout_column="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefono_no"
                android:layout_row="3"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblAVRTelefono"
                android:layout_row="3"
                android:layout_column="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correo_no"
                android:layout_row="4"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblAVRCorreo"
                android:layout_row="4"
                android:layout_column="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estado_no"
                android:layout_row="5"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblAVREstado"
                android:layout_row="5"
                android:layout_column="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ciudad_no"
                android:layout_row="6"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblAVRCiudad"
                android:layout_row="6"
                android:layout_column="2" />

         </GridLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/rectangle_head">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/datos_vehiculo"
                android:textColor="@color/Blanco"/>
        </LinearLayout>

        <GridLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/rectangle"
            android:paddingLeft="10px"
            android:paddingRight="10px"
            android:padding="20px"
            android:layout_marginBottom="10px">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marca_no"
                android:layout_row="0"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblAVRMarca"
                android:layout_row="0"
                android:layout_column="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modelo_no"
                android:layout_row="1"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblAVRModelo"
                android:layout_row="1"
                android:layout_column="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anno_no"
                android:layout_row="2"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblAVRAnno"
                android:layout_row="2"
                android:layout_column="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serial_carroceria_no"
                android:layout_row="3"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblAVRSerial"
                android:layout_row="3"
                android:layout_column="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipo_repuesto_no"
                android:layout_row="4"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblAVRTipoRepuesto"
                android:layout_row="4"
                android:layout_column="2" />

        </GridLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/rectangle_head">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/datos_repuestos"
                android:layout_marginLeft="20px"
                android:textColor="@color/Blanco" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/rectangle"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:focusableInTouchMode="true"
                android:id="@+id/tblAVRRepuestos"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:background="@drawable/rectangle_table_base"
                android:paddingBottom="5dp"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>

        <GridLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/campos_obligatorios"
                android:textColor="@color/Rojo"
                android:layout_row="0"
                android:layout_column="0" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cerrar"
                android:id="@+id/btnAVRCerrar"
                style="@style/BaseButton"
                android:layout_row="0"
                android:layout_column="10" />

        </GridLayout>

    </LinearLayout>

    </RelativeLayout>

</ScrollView>
